crates/ruff_linter/src/rules/flake8_blind_except/snapshots/ruff_linter__rules__flake8_blind_except__tests__BLE001_BLE.py.snap
---
source: crates/ruff_linter/src/rules/flake8_blind_except/mod.rs
---
BLE001 Do not catch blind exception: `BaseException`
  --> BLE.py:25:8
   |
25 | except BaseException:
   |        ^^^^^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:31:8
   |
31 | except Exception:
   |        ^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:42:8
   |
42 | except Exception as e:
   |        ^^^^^^^^^
   |

BLE001 Do not catch blind exception: `BaseException`
  --> BLE.py:45:12
   |
45 |     except BaseException:
   |            ^^^^^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:54:8
   |
54 | except Exception:
   |        ^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:60:8
   |
60 | except Exception as e:
   |        ^^^^^^^^^
   |

BLE001 Do not catch blind exception: `BaseException`
  --> BLE.py:62:8
   |
62 | except BaseException:
   |        ^^^^^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:69:8
   |
69 | except Exception:
   |        ^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:75:8
   |
75 | except Exception:
   |        ^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:81:8
   |
81 | except Exception:
   |        ^^^^^^^^^
   |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:101:8
    |
101 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:107:8
    |
107 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:113:8
    |
113 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:119:8
    |
119 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:125:8
    |
125 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:131:8
    |
131 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:174:9
    |
174 | except (Exception,):
    |         ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:179:9
    |
179 | except (Exception, ValueError):
    |         ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:184:21
    |
184 | except (ValueError, Exception):
    |                     ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:189:21
    |
189 | except (ValueError, Exception) as e:
    |                     ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:194:9
    |
194 | except (BaseException, TypeError):
    |         ^^^^^^^^^^^^^
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:199:20
    |
199 | except (TypeError, BaseException):
    |                    ^^^^^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:204:9
    |
204 | except (Exception, BaseException):
    |         ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:209:9
    |
209 | except (BaseException, Exception):
    |         ^^^^^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:215:10
    |
215 | except ((Exception, ValueError), TypeError):
    |          ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:220:22
    |
220 | except (ValueError, (BaseException, TypeError)):
    |                      ^^^^^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:269:8
    |
269 | except Exception as e:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:275:8
    |
275 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:280:8
    |
280 | except Exception as e:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:286:8
    |
286 | except Exception:
    |        ^^^^^^^^^
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:292:8
    |
292 | except Exception as e:
    |        ^^^^^^^^^
    |
