crates/ruff_linter/src/rules/flake8_blind_except/snapshots/ruff_linter__rules__flake8_blind_except__tests__blind-except_BLE.py.snap
---
source: crates/ruff_linter/src/rules/flake8_blind_except/mod.rs
---
BLE001 Do not catch blind exception: `BaseException`
  --> BLE.py:25:8
   |
23 | except Exception as e:
24 |     raise e
25 | except BaseException:
   |        ^^^^^^^^^^^^^
26 |     pass
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:31:8
   |
29 | try:
30 |     pass
31 | except Exception:
   |        ^^^^^^^^^
32 |     pass
33 | finally:
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:42:8
   |
40 | try:
41 |     pass
42 | except Exception as e:
   |        ^^^^^^^^^
43 |     try:
44 |         raise e
   |

BLE001 Do not catch blind exception: `BaseException`
  --> BLE.py:45:12
   |
43 |     try:
44 |         raise e
45 |     except BaseException:
   |            ^^^^^^^^^^^^^
46 |         pass
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:54:8
   |
52 |     except BaseException as e:
53 |         raise e
54 | except Exception:
   |        ^^^^^^^^^
55 |     pass
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:60:8
   |
58 | try:
59 |     pass
60 | except Exception as e:
   |        ^^^^^^^^^
61 |     raise bad
62 | except BaseException:
   |

BLE001 Do not catch blind exception: `BaseException`
  --> BLE.py:62:8
   |
60 | except Exception as e:
61 |     raise bad
62 | except BaseException:
   |        ^^^^^^^^^^^^^
63 |     pass
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:69:8
   |
67 | try:
68 |     pass
69 | except Exception:
   |        ^^^^^^^^^
70 |     logging.error("...")  # BLE001
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:75:8
   |
73 | try:
74 |     pass
75 | except Exception:
   |        ^^^^^^^^^
76 |     logging.error("...", exc_info=False)  # BLE001
   |

BLE001 Do not catch blind exception: `Exception`
  --> BLE.py:81:8
   |
79 | try:
80 |     pass
81 | except Exception:
   |        ^^^^^^^^^
82 |     logging.error("...", exc_info=None)  # BLE001
   |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:101:8
    |
 99 | try:
100 |     pass
101 | except Exception:
    |        ^^^^^^^^^
102 |     error("...")  # BLE001
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:107:8
    |
105 | try:
106 |     pass
107 | except Exception:
    |        ^^^^^^^^^
108 |     error("...", exc_info=False)  # BLE001
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:113:8
    |
111 | try:
112 |     pass
113 | except Exception:
    |        ^^^^^^^^^
114 |     error("...", exc_info=None)  # BLE001
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:119:8
    |
117 | try:
118 |     pass
119 | except Exception:
    |        ^^^^^^^^^
120 |     critical("...")  # BLE001
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:125:8
    |
123 | try:
124 |     pass
125 | except Exception:
    |        ^^^^^^^^^
126 |     critical("...", exc_info=False)  # BLE001
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:131:8
    |
129 | try:
130 |     pass
131 | except Exception:
    |        ^^^^^^^^^
132 |     critical("...", exc_info=None)  # BLE001
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:174:9
    |
172 | try:
173 |     pass
174 | except (Exception,):
    |         ^^^^^^^^^
175 |     pass
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:179:9
    |
177 | try:
178 |     pass
179 | except (Exception, ValueError):
    |         ^^^^^^^^^
180 |     pass
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:184:21
    |
182 | try:
183 |     pass
184 | except (ValueError, Exception):
    |                     ^^^^^^^^^
185 |     pass
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:189:21
    |
187 | try:
188 |     pass
189 | except (ValueError, Exception) as e:
    |                     ^^^^^^^^^
190 |     print(e)
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:194:9
    |
192 | try:
193 |     pass
194 | except (BaseException, TypeError):
    |         ^^^^^^^^^^^^^
195 |     pass
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:199:20
    |
197 | try:
198 |     pass
199 | except (TypeError, BaseException):
    |                    ^^^^^^^^^^^^^
200 |     pass
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:204:9
    |
202 | try:
203 |     pass
204 | except (Exception, BaseException):
    |         ^^^^^^^^^
205 |     pass
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:209:9
    |
207 | try:
208 |     pass
209 | except (BaseException, Exception):
    |         ^^^^^^^^^^^^^
210 |     pass
    |

BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:215:10
    |
213 | try:
214 |     pass
215 | except ((Exception, ValueError), TypeError):
    |          ^^^^^^^^^
216 |     pass
    |

BLE001 Do not catch blind exception: `BaseException`
   --> BLE.py:220:22
    |
218 | try:
219 |     pass
220 | except (ValueError, (BaseException, TypeError)):
    |                      ^^^^^^^^^^^^^
221 |     pass
    |
