crates/ruff_linter/src/rules/flake8_blind_except/snapshots/ruff_linter__rules__flake8_blind_except__tests__preview_BLE001_BLE.py.snap
---
source: crates/ruff_linter/src/rules/flake8_blind_except/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 5
Added: 0

--- Removed ---
BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:269:8
    |
269 | except Exception as e:
    |        ^^^^^^^^^
    |


BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:275:8
    |
275 | except Exception:
    |        ^^^^^^^^^
    |


BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:280:8
    |
280 | except Exception as e:
    |        ^^^^^^^^^
    |


BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:286:8
    |
286 | except Exception:
    |        ^^^^^^^^^
    |


BLE001 Do not catch blind exception: `Exception`
   --> BLE.py:292:8
    |
292 | except Exception as e:
    |        ^^^^^^^^^
    |
